despatma-dependency-container/tests/fail/mismatch_return_type.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/fail/mismatch_return_type.rs:27:9
   |
27 |         Service::new(config, unit)
   |         ^^^^^^^^^^^^ ------  ---- expected `Unit`, found `()`
   |                      |
   |                      expected `u32`, found `Config`
   |
note: associated function defined here
  --> tests/fail/mismatch_return_type.rs:10:8
   |
10 |     fn new(port: u32, _unit: Unit) -> Self {
   |        ^^^ ---------  -----------
